--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://www.svgrepo.com/show/198053/dice.svg"
-      href="https://freesvg.org/img/six-sided-dice_too.png"
+      href="https://www.freepnglogos.com/uploads/dice-png/dice-designs-png-icons-and-png-backgrounds-15.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tenzi Dices</title>
